--- a/templates/base.html
+++ b/templates/base.html
@@ -153,7 +153,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url 'celebration:all' %}">Celebrations</a></li>
-                                <li><a class="dropdown-item" href="{% url 'talk:all' %}">Lectures/Workshop</a></li>
+                                <!-- <li><a class="dropdown-item" href="{% url 'talk:all' %}">Lectures/Workshop</a></li> -->
 
                             </ul>
                         </li> 
