--- a/inplex/templates/inplex/student_experience.html
+++ b/inplex/templates/inplex/student_experience.html
@@ -471,56 +471,73 @@ a {
 							<div style="background: rgb(233, 238, 244);border-top-left-radius:16px ;border-top-right-radius:46px; margin-bottom: 5vh;margin-left: 5vw;">
 								<div class="col-6 col-lg-3" style="display: inline-block;max-width: 299px;">
 									<div class="form-group">
+										<label for="branch">Name</label>
+										<input type="text" id="name" class="form-control" id="branch" style="border-color: #7774e7;">
+											
+										
+									</div>
+								</div>
+
+								<div class="col-6 col-lg-3" style="display: inline-block;max-width: 299px;">
+									<div class="form-group">
 										<label for="branch">Branch</label>
-										<select class="form-control" id="branch_filter" style="border-color: #7774e7;">
-											<option selected="true" value="all">All</option>
-											{%for branch in branches %}
-											<option value="{{branch.branchName}}">{{branch}}</option>
-											{% endfor %}
+										<select class="form-control" id="branch" style="border-color: #7774e7;">
+											<option selected="true" value="" disabled>All</option>
+                                            {%for j in branches%}
+											<option value='{{j.name}}'>{{j.name}}</option>
+                                            {%endfor%}
+										</select>
+									</div>
+								</div>
+
+								<!-- <div class="col-6 col-lg-3" style="display: inline-block;max-width: 299px;">
+									<div class="form-group">
+										<label for="year">Graduation Year</label>
+										<select class="form-control" id="year" style="border-color: #7774e7;">
+                                            {%for j in years%}
+											<option value={{j.name}}>{{j.name}}</option>
+                                            {%endfor%}
+										</select>
+									</div>
+								</div> -->
+
+
+								<div class="col-6 col-lg-3" style="display: inline-block;max-width: 299px;">
+									<div class="form-group">
+										<label for="SortBy">Company</label>
+										<select class="form-control" id="company" style="border-color: #7774e7;">
+                                            <option selected="true" value="" disabled>All</option>
+                                            {%for j in companies%}
+                                        
+											<option value='{{j.name}}'>{{j.name}}</option>
+                                            {%endfor%}
+										</select>
+									</div>
+								</div>
+								<div class="col-6 col-lg-3" style="display: inline-block;max-width: 299px;">
+									<div class="form-group">
+										<label for="SortBy">Profile</label>
+										<select class="form-control" id="profile" style="border-color: #7774e7;">
+                                            <option selected="true" value="" disabled>All</option>
+                                            {%for j in profiles%}
+											<option value='{{j.name}}'>{{j.name}}</option>
+                                            {%endfor%}
 										</select>
 									</div>
 								</div>
 
 								<div class="col-6 col-lg-3" style="display: inline-block;max-width: 299px;">
 									<div class="form-group">
-										<label for="branch">Program</label>
-										<select class="form-control" id="program_filter" style="border-color: #7774e7;">
-											<option selected="true" value="all">All</option>
-											<option value="B.Tech">B.Tech</option>
-											<option value="B.Des">B.Des</option>
-											<option value="M.Tech">M.Tech</option>
-											<option value="M.Des">M.Des</option>
-											<option value="M.Sc">M.Sc</option>
-											<option value="Phd">Phd</option>
-											<option value="Others">Others</option>
-										</select>
+										<button class="form-control" id="filter" style="border-color: #7774e7;">
+                                            Filter
+                                        </button>
 									</div>
 								</div>
-
 								<div class="col-6 col-lg-3" style="display: inline-block;max-width: 299px;">
 									<div class="form-group">
-										<label for="branch">Year</label>
-										<select class="form-control" id="program_filter" style="border-color: #7774e7;">
-											<option selected="true" value="2023">2023</option>
-											<option value="2022">2022</option>
-											<option value="2021">2021</option>
-										</select>
-									</div>
-								</div>
-
-
-								<div class="col-6 col-lg-3" style="display: inline-block;max-width: 299px;">
-									<div class="form-group">
-										<label for="SortBy">Sort By</label>
-										<select class="form-control" id="sort" style="border-color: #7774e7;">
-											<option selected="true" value='roll'>Roll No</option>
-											<option value='name'>Name</option>
-											<option value='programs'>Program</option>
-											<option value='branch'>Branch</option>
-											<option value='company'>Company</option>
-											<option value='profile'>Profile</option>
-											<option value='sector'>Sector</option>
-										</select>
+										<button class="form-control" id="reset" style="border-color: #7774e7;">
+                                            Reset
+                                        </button>
 									</div>
 								</div>
 							</div>
@@ -613,4 +630,49 @@ a {
 
 </div>
 
+
+
+<script>
+    document.getElementById('filter').addEventListener('click', (e) => {
+        const name = document.getElementById('name').value;
+        const branch = document.getElementById('branch').value;
+        // const year = document.getElementById('year').value;
+        const company = document.getElementById('company').value;
+        const profile = document.getElementById('profile').value;
+        // company.replace(' ', '+')
+        console.log(company);
+        var filter_argument = '';
+        if(name != ''){
+            if(filter_argument === '') filter_argument = '?';
+            else filter_argument += '&';
+            filter_argument += 'name='
+            filter_argument += name;
+        }
+        if(branch != ''){
+            if(filter_argument === '') filter_argument = '?';
+            else filter_argument += '&';
+            filter_argument += 'branch='
+            filter_argument += branch;
+        }
+        // if(year != ''){
+        //     if(filter_argument === '') filter_argument = '?';
+        //     else filter_argument += '&';
+        //     filter_argument += 'year='
+        //     filter_argument += year;
+        // }
+        if(company != ''){
+            if(filter_argument === '') filter_argument = '?';
+            else filter_argument += '&';
+            filter_argument += 'company='
+            filter_argument += company;
+        }
+        if(profile != ''){
+            if(filter_argument === '') filter_argument = '?';
+            else filter_argument += '&';
+            filter_argument += 'profile='
+            filter_argument += profile;
+        }
+        window.location = filter_argument;
+    })
+</script>
 {% endblock %}
