minor UI changes

--- a/inplex/templates/inplex/student_experience.html
+++ b/inplex/templates/inplex/student_experience.html
@@ -38,7 +38,6 @@
 	body,
 	html {
 		height: 100%;
-		font-family: sans-serif;
 	}
 
 	/* ------------------------------------ */
@@ -456,7 +455,7 @@ a {
 	<br><br>
 	<div class="text-center ">
 
-		<h2 class="display-5">Experience</h2>
+		<h2 class="display-5">Experiences</h2>
 	</div>
 	<br>
 
