--- a/inplex/templates/inplex/detail.html
+++ b/inplex/templates/inplex/detail.html
@@ -43,7 +43,7 @@
     }
 
     .background {
-        height: 50vh;
+        height: 70vh;
         background-image: url('/cepstrum/static/inplex/cover.png');
         background-size: cover;
         background-repeat: no-repeat;
@@ -82,7 +82,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        background: linear-gradient(326deg, rgba(16, 6, 35, 1) 0%, rgba(26, 2, 105, 1) 100%);
+        background: linear-gradient(326deg, rgba(16, 6, 35, 1) 0%, rgb(72, 70, 76) 100%);
         font-weight: 500;
         font-size: 1.2rem;
         /* overflow: hidden; */
@@ -97,7 +97,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        background: linear-gradient(326deg, rgba(16, 6, 35, 1) 0%, rgba(26, 2, 105, 1) 100%);
+        background: linear-gradient(326deg, rgba(16, 6, 35, 1) 0%, rgb(72, 70, 76) 100%);
         font-weight: 500;
         font-size: 1.2rem;
         color: #fff;
@@ -190,7 +190,7 @@ border-radius: 5px;
         }
     }
     .collapsible {
-        background-color: #14043f;
+        background-color: #3e394b;
         color: white;
         cursor: pointer;
         padding: 12px;
@@ -202,12 +202,11 @@ border-radius: 5px;
     }
     .active1,
     .collapsible:hover {
-        background-color: linear-gradient(326deg, rgba(16, 6, 35, 1) 0%, rgba(26, 2, 105, 1) 100%);
-        ;
+        background-color: linear-gradient(326deg, rgba(16, 6, 35, 1) 0%, rgb(72, 70, 76) 100%);
     }
     .collapsible:after {
         content: '\002B';
-        color: yellow;
+        color: white;
         font-weight: bold;
         float: right;
         margin-left: 5px;
@@ -233,57 +232,45 @@ border-radius: 5px;
         <div class="carousel-item-content">
             <div class="text-2xl  md:text-5xl mb-4"><b>{{object.owner.first_name}}'s <font color="yellow">Profile</font>
             </div>
-            <div class="text-lg md:text-1xl" style="display: flex;flex-direction: row;">
-                <div><a href="{{object.linked_in_profile}}">LinkedIn</a></div>
+            <div class="text-lg md:text-1xl font-thin" style="display: flex;flex-direction: row;">
+                <div>{{object.branch}}</div>
+                <div style="padding-left: 8px;padding-right: 8px;">
+                    <font> | </font>
+                </div>
+                <div>{{object.year}}</div>
+            </div>
+            <div class="text-lg md:text-1xl font-thin mb-4" style="display: flex;flex-direction: row;">
+                <div>Selected in <span class="font-medium" style="color:yellow">{{object.selected_company}}</span> for <span class="font-medium" style="color:yellow"> {{object.profile}}</span> role</div>
+            </div>
+            <div class="text-lg md:text-1xl mt-auto" style="display: flex;flex-direction: row;">
+                <div><a href="{{object.linked_in_profile}}" class="font-medium">LinkedIn</a></div>
                 <div style="padding-left: 8px;padding-right: 8px;">
                     <font color="yellow"> | </font>
                 </div>
-                <div><a href="{{object.resume}}">Resume</a></div>
+                <div><a href="{{object.resume}}" class="font-medium">Resume</a></div>
             </div>
         </div>
     </div>
 </div>
-<div style="display: flex;justify-content: center;margin-top: 5vh;">
-    <div class="details">
-        <div class="cards">
-            <div style="font-size: 1.5rem;color: yellow;font-variant-caps: small-caps; ">Branch-</div>
-            <div style="background-color: white;border-radius:7px;color: black;padding-left: 10px;" class="font-size">
-                {{object.branch}}</div>
-        </div>
-        <div class="cards">
-            <div style="font-size: 1.5rem;color: yellow;font-variant-caps: small-caps; ">Program-</div>
-            <div style="background-color: white;border-radius:7px;color: black;padding-left: 10px;" class="font-size">
-                {{object.program}}</div>
-        </div>
-        <div class="cards">
-            <div style="font-size: 1.5rem;color: yellow;font-variant-caps: small-caps; ">Year-</div>
-            <div style="background-color: white;border-radius:7px;color: black;padding-left: 10px;" class="font-size">
-                {{object.year}}</div>
-        </div>
-        <div class="cards">
-            <div style="font-size: 1.5rem;color: yellow;font-variant-caps: small-caps; ">Phone No.-</div>
-            <div style="background-color: white;border-radius:7px;color: black;padding-left: 10px;" class="font-size">
-                {{object.number}}</div>
-        </div>
-        <div class="cards">
-            <div style="font-size: 1.5rem;color: yellow;font-variant-caps: small-caps; ">Profile-</div>
-            <div style="background-color: white;border-radius:7px;color: black;padding-left: 10px;" class="font-size">
-                {{object.profile}}</div>
-        </div>
-    </div>
-</div>
+
 {% endblock %}
 {% block content %}
-    <div class="container">
-       
-        <div class="resources">
-            <div style="font-size: 2rem;color: yellow;font-variant-caps: small-caps;align-self: center; margin-right: 2vh;">Resources</div>
-            <div class="resources_container">{{object.resource|safe}}</div>
-        </div>
-        <div class="experience_list">
-            {% for i in exp %} {% if i.owner == object.owner %}
-            <div class="company">
-                <div style="text-align: center;font-size: 2.3rem;font-variant-caps: small-caps;">{{i.company}}</div>
+<div class="container">
+
+    <div class="resources">
+        <div
+            style="font-size: 1.5rem;color: yellow;font-variant-caps: small-caps;align-self: center; margin-right: 2vh;">
+            Resources Used</div>
+        <div class="resources_container" style="font-size: 1rem;">{{object.resource|safe}}</div>
+    </div>
+    <div class="experience_list">
+        {% for i in exp %} {% if i.owner == object.owner %}
+        <div class="company" >
+            <div class="collapsible"
+                style="text-align: center;font-size: 1.5rem;font-variant-caps: small-caps;color: yellow !important;">{{i.company}}
+                
+            </div>
+            <div class="content">
                 <div class="roundwise_experience">
                     {% if i.experience1 != "" %}
                     <div class="resources">
