--- a/paperman/templates/paperman/paperman_list.html
+++ b/paperman/templates/paperman/paperman_list.html
@@ -6,7 +6,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        background: linear-gradient(326deg, rgba(16,6,35,1) 0%, rgba(26,2,105,1) 100%);
+        background: linear-gradient(326deg, rgb(19, 13, 29) 0%, rgb(52, 48, 64) 100%);
         font-weight: 700;
         font-size: 1.4rem;
         color: #fff;
@@ -15,9 +15,9 @@
       
     }
 
-    .year-card:hover{
+    /* .year-card:hover{
         transform: scale(1.01);
-    }
+    } */
     .year-card::before{
         color: rgba(216, 211, 161, 0.2);
         position: absolute;
