--- a/celebration/templates/celebration/celebration_detail.html
+++ b/celebration/templates/celebration/celebration_detail.html
@@ -2,12 +2,15 @@
 
 <style>
   .title{
-    color:yellow;
-    text-align:center;
-    font-size:6vh;
-    background-color:black;
-    font-variant-caps:small-caps;  
-  }
+    color: yellow;
+    text-align: center;
+    font-size: 6vh;
+    background-color: black;
+    text-transform: lowercase;
+    font-variant-caps: small-caps;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  }  
+  
   .image_carousel img{
     height: 100vh;
     width: 100vw;
