--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,9 @@
 <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Acme&family=Lobster&family=Montserrat:wght@400;600;700;900&family=Nunito:wght@400;500&family=Orbitron&family=Pacifico&family=Poppins&display=swap');
-
+body{
+    cursor: default;
+}
     .my-nav {
 
         z-index: 10;
