--- a/inplex/templates/inplex/detail.html
+++ b/inplex/templates/inplex/detail.html
@@ -97,7 +97,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        background: linear-gradient(326deg, rgba(16, 6, 35, 1) 0%, rgb(72, 70, 76) 100%);
+        background: linear-gradient(326deg, rgba(16, 6, 35, 1) 0%, rgb(72, 70 76) 100%);
         font-weight: 500;
         font-size: 1.2rem;
         color: #fff;
