--- a/templates/base.html
+++ b/templates/base.html
@@ -148,7 +148,7 @@ body{
 
                             </ul>
                         </li>
-                        <li style="display: flex; align-items: center;"><a class="nav-link" href="{% url 'celebration:all' %}" style="color: grey;">Celebrations</a>
+                        <li style="display: flex; align-items: center;"><a class="nav-link" href="{% url 'celebration:all' %}">Events</a>
                         </li>
 
                         <!-- {% if user.is_authenticated %}
