--- a/inplex/templates/inplex/detail.html
+++ b/inplex/templates/inplex/detail.html
@@ -82,7 +82,9 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        background-color: rgb(72, 70, 76);
         background: linear-gradient(326deg, rgba(16, 6, 35, 1) 0%, rgb(72, 70, 76) 100%);
+
         font-weight: 500;
         font-size: 1.2rem;
         /* overflow: hidden; */
@@ -97,7 +99,9 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        background: linear-gradient(326deg, rgba(16, 6, 35, 1) 0%, rgb(72, 70 76) 100%);
+        background-color: rgb(72, 70, 76);
+        background-image: linear-gradient(326deg, rgba(16, 6, 35, 1), rgb(72, 70 76));
+   
         font-weight: 500;
         font-size: 1.2rem;
         color: #fff;
@@ -206,9 +210,11 @@ border-radius: 5px;
         outline: none;
         border-radius: 5px;
     }
-    .active1,
-    .collapsible:hover {
-        background-color: linear-gradient(326deg, rgba(16, 6, 35, 1) 0%, rgb(72, 70, 76) 100%);
+    .active1
+    {
+   
+background-color: rgba(16, 6, 35, 1);
+
     }
     .collapsible:after {
         content: '\002B';
