--- a/inplex/templates/inplex/detail.html
+++ b/inplex/templates/inplex/detail.html
@@ -150,9 +150,7 @@ border-radius: 5px;
     .resources_detail {
         min-width: 25vw;
     }
-    .font-size{
-        font-size: 1.1rem;
-    }
+
 
     @media screen and (max-width:1300px) {
         .details {
@@ -186,7 +184,7 @@ border-radius: 5px;
 
     @media screen and (max-width:600px) {
 
-        .resources_container ,.font-size {
+        .resources_container , {
 
             font-size: 18px !important;
         }
@@ -196,7 +194,7 @@ border-radius: 5px;
 
         .resources_container ,.font-size {
 
-            font-size: 12px !important;
+            font-size: 10px !important;
         }
     }
     .collapsible {
